--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,58 @@
-#heading {
-  color: rebeccapurple;
+* {
+  margin: 0;
+  padding: 0;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: 10px;
+}
+
+.logo {
+  width: 100px;
+}
+.nav-items-ul {
+  font-size: 24px;
+  display: flex;
+
+  list-style-type: none;
+}
+.nav-items-ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 250px;
+  height: 300px;
+  background-color: #f0f0f0;
+}
+.res-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+.search {
+  padding: 10px;
+}
+.res-image-container {
+  margin: 10px;
+  padding: 10px;
+}
+.res-image {
+  width: 200px;
+}
+.res-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
