--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 .header {
   display: flex;
@@ -35,10 +36,12 @@
   width: 250px;
   height: 500px;
   background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .res-card:hover {
   cursor: pointer;
-  border: 1px solid black;
+  border: 2px solid rgb(168, 94, 94);
 }
 .search {
   padding: 10px;
@@ -46,10 +49,12 @@
 .res-image-container {
   margin: 10px;
   padding: 10px;
+  width: 220px;
+  height: 220px;
 }
 .res-image {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
 }
 .res-details > p {
   width: 200px;
@@ -59,8 +64,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 100%;
+  width: 80%;
   white-space: normal; /* Allows text to wrap */
   word-wrap: break-word; /* Break long words */
   gap: 10px;
@@ -92,6 +96,7 @@
   width: 250px;
   height: 500px;
   background-color: #f0f0f0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .login {
