--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,8 @@
   border-radius: 5px;
   height: 30px;
   width: 200px;
-  margin: 10px;
+  /* margin: 10px; */
+  margin-top: 20px;
   cursor: pointer;
 }
 .shimmer-container {
@@ -109,4 +110,31 @@
   width: 100px;
   margin: 20px;
   cursor: pointer;
+}
+
+.filter {
+  display: flex;
+}
+.search-box {
+  height: 30px;
+  width: 200px;
+}
+.search-btn {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: beige;
+  border: 1px solid saddlebrown;
+  color: rgb(43, 40, 40);
+  font-size: 15px;
+  border-radius: 5px;
+  height: 30px;
+  width: 200px;
+  margin: 10px;
+  cursor: pointer;
+}
+.not-found-container {
+  height: 500px;
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
